fix: adjust style for dark mode and drawer item

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -26,6 +26,8 @@ $app-grey-40: #8c8c8c;
 $app-text-primary: $dark;
 $app-background: $app-grey-5;
 $app-hover: $warning;
+$app-movie-intro: #a62626bf;
+$app-movie-watch-btn: #267aa6bf;
 
 $app-container-width: 1200px;
 $app-login-card-width: 450px;
